package org.example.TechZone.model;

public enum TipoDePago {
    EFECTIVO,TARJETA,TRANSFERENCIA
}
