package org.example.TechZone.model;

public enum Vistas {

}
