package org.example.TechZone.model;

import lombok.Getter;
import lombok.Setter;

import javax.persistence.Embeddable;


@Embeddable
@Getter
@Setter
public class VistasPermitidas {
    private String nombreVista;
}
